@@ -113,10 +113,10 @@ static volatile int resize_y = 480;
 static volatile int wx0 = 0;
 static volatile int wy0 = 0;
 
-const uint16_t spec_keys[] = {SDLK_KP4, SDLK_LEFT, SDLK_KP6, SDLK_RIGHT, SDLK_KP8, SDLK_UP, SDLK_KP2, SDLK_DOWN, SDLK_DELETE, SDLK_KP7, SDLK_HOME, SDLK_END , SDLK_KP1, SDLK_END, SDLK_KP9, SDLK_PAGEUP, SDLK_KP3, SDLK_PAGEDOWN, SDLK_F1   , SDLK_F1, SDLK_F2, SDLK_F3, SDLK_F4, SDLK_F5, SDLK_F6, SDLK_F10 , SDLK_F10, SDLK_KP_PLUS, SDLK_KP_MINUS, SDLK_j   , SDLK_q  , SDLK_x  , SDLK_1  , SDLK_2  , SDLK_3  , SDLK_4  , SDLK_7  , SDLK_0  , SDLK_n  , SDLK_p  , SDLK_b  , SDLK_s  , SDLK_u  , SDLK_i	,0};
-const uint16_t spec_mod[] =  {0       , 0        , 0       , 0         , 0       , 0      , 0       , 0        , 0          , 0       , 0        , KMOD_CTRL, 0       , 0       , 0       , 0          , 0       , 0            , KMOD_SHIFT, 0      , 0      , 0      , 0      , 0      , 0      , KMOD_CTRL, 0       , 0           , 0            , KMOD_CTRL, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT};
-const uint8_t  spec_null[] = {1       , 1        , 1       , 1         , 1       , 1      , 1       , 1        , 1          , 1       , 1        , 1        , 1       , 1       , 1       , 1          , 1       , 1            , 1         , 1      , 1      , 1      , 1      , 1      , 1      , 1        , 1       , 0           , 0            , 0        , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1    };
-const uint8_t  spec_map[] =  {75      , 75       , 77      , 77        , 72      , 72     , 80      , 80       , 83         , 71      , 71       , 117      , 79      , 79      , 73      , 73         , 81      , 81           , 84        , 59     , 60     , 61     , 62     , 63     , 64     , 103      , 16      , 43          , 45           , 10       , 16      , 45      , 120     , 121     , 122     , 123     , 126     , 129     , 49      , 25      , 48      , 31      , 22      , 23   };
+const uint16_t spec_keys[] = {SDLK_KP4, SDLK_LEFT, SDLK_KP6, SDLK_RIGHT, SDLK_KP8, SDLK_UP, SDLK_KP2, SDLK_DOWN, SDLK_DELETE, SDLK_KP7, SDLK_HOME, SDLK_END , SDLK_KP1, SDLK_END, SDLK_KP9, SDLK_PAGEUP, SDLK_KP3, SDLK_PAGEDOWN, SDLK_KP5, SDLK_F1   , SDLK_F1, SDLK_F2, SDLK_F3, SDLK_F4, SDLK_F5, SDLK_F6, SDLK_F10 , SDLK_F10, SDLK_KP_PLUS, SDLK_KP_MINUS, SDLK_j   , SDLK_q  , SDLK_x  , SDLK_1  , SDLK_2  , SDLK_3  , SDLK_4  , SDLK_7  , SDLK_0  , SDLK_n  , SDLK_p  , SDLK_b  , SDLK_s  , SDLK_u  , SDLK_i	,0};
+const uint16_t spec_mod[] =  {0       , 0        , 0       , 0         , 0       , 0      , 0       , 0        , 0          , 0       , 0        , KMOD_CTRL, 0       , 0       , 0       , 0          , 0       , 0            , 0       , KMOD_SHIFT, 0      , 0      , 0      , 0      , 0      , 0      , KMOD_CTRL, 0       , 0           , 0            , KMOD_CTRL, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT, KMOD_ALT};
+const uint8_t  spec_null[] = {0       , 1        , 0       , 1         , 0       , 1      , 0       , 1        , 1          , 0       , 1        , 1        , 0       , 1       , 0       , 1          , 0       , 1            , 0       , 1         , 1      , 1      , 1      , 1      , 1      , 1      , 1        , 1       , 0           , 0            , 0        , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1       , 1    };
+const uint8_t  spec_map[] =  {52      , 75       , 54      , 77        , 56      , 72     , 50      , 80       , 83         , 55      , 71       , 117      , 49      , 79      , 57      , 73         , 51      , 81           , 53      , 84        , 59     , 60     , 61     , 62     , 63     , 64     , 103      , 16      , 43          , 45           , 10       , 16      , 45      , 120     , 121     , 122     , 123     , 126     , 129     , 49      , 25      , 48      , 31      , 22      , 23   };
 
 
 static inline void _nanosleep(long nsec)
